prisma/prisma-cloud/blocks/sidenav/sidenav.css
/* ... */
.banner-inner > .book-detail-banner-info,
.pan-sidenav .languages {
  display: none;
}

/* .pan-sidenav::before {
    content: "";
    display: block;
    position: absolute;
    top: 25px;
    left: -100px;
    z-index: -1;
    width: 428px;
    height: 270px;
    background-repeat: no-repeat;
    background-position: right bottom;
    background-size: 428px 270px;
    pointer-events: none;
    opacity: 0.5;
    background-image: url("/prisma/prisma-cloud/assets/sase-cns-pattern.webp");
  } */

/* .pan-sidenav .book-detail-banner-info {
  display: flex;
  align-items: center;
  color: black;
} */

.pan-sidenav .banner-info-label {
  display: none;
}

.versions .banner-dropdown,
.versions .book-detail-banner-info {
  display: flex;
  width: 100%;
}

.versions .banner-dropdown {
  background: var(--banner-background-color);
  box-shadow: var(--banner-box-shadow);
  border-radius: var(--article-border-radius);
  color: var(--banner-text-color);
  transition: background-color var(--theme-transition-ease-duration)
    var(--theme-transition-ease-function);
}

.pan-sidenav .version-dropdown {
  position: relative;
  min-width: 150px;
}

.pan-sidenav .version-button {
  align-items: center;
  background: transparent;
  border: none;
  color: var(--banner-text-color);
  cursor: pointer;
  display: flex;
  font-family: var(--body-font-family);
  justify-content: space-between;
  padding: var(--spacing--5) var(--spacing--6);
  text-decoration: none;
  transition: color var(--theme-transition-ease-duration)
    var(--theme-transition-ease-function);
  width: 100%;
}

.version-dropdown .icon-container {
  align-items: center;
  background-color: var(--banner-icon-background-color);
  border-radius: 50%;
  display: flex;
  justify-content: center;
  transition: background-color var(--theme-transition-ease-duration)
    var(--theme-transition-ease-function);
  height: var(--spacing--4);
  width: var(--spacing--4);
}

.version-dropdown .icon-container svg {
  height: var(--spacing--2);
  width: var(--spacing--2);
}

.pan-sidenav .version-dropdown-menu {
  bottom: calc(var(--drawer-margin-gap) * -1);
  left: 0;
  position: absolute;
  transform: translateY(100%);
  width: 100%;
  z-index: 2;
}

.pan-sidenav .version-dropdown .version-dropdown-menu ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.pan-sidenav
  .version-dropdown-menu.is-active
  + .version-button
  .icon-container {
  transform: scale(-1);
}

.pan-sidenav .content {
  display: flex;
  flex-direction: column;
  height: 100%;
  margin-top: var(--spacing--10);
  padding: 0;
  position: relative;
  z-index: 1;
}

.pan-sidenav .content h2 {
  font-size: 22px;
  font-weight: 700;
}

.pan-sidenav .banner-inner .banner-inner-mobile {
  display: none;
}

/* .pan-sidenav .banner-inner-mobile h2,
.pan-sidenav .banner-inner-mobile h2 a {
  color: #000;
  font-size: 20px;
}

.pan-sidenav .banner-inner-mobile hr {
  margin-top: 25px;
}

.pan-sidenav .banner-inner-mobile .title {
  display: block;
  margin-bottom: 30px;
} */

.pan-sidenav .locale-toc-title {
  display: none;
}

.pan-sidenav .locale-toc-title h2 {
  font-size: 22px;
  margin-top: 20px;
  margin-bottom: 10px;
  font-family: inherit;
  font-weight: 600;
  line-height: 1.1;
  color: #36424b;
}

.pan-sidenav hr {
  background: #00c0e8;
  height: 3px;
  min-height: 3px;
  border: 0;
  width: 75px;
  margin-left: 0;
  margin-top: 5px;
  margin-bottom: 20px;
  box-sizing: content-box;
}

.pan-sidenav .search-toc {
  margin-bottom: 20px;

  display: none;
}

.pan-sidenav .search-toc-label {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  font-weight: 500;
  margin-bottom: 10px;
}

.pan-sidenav .filter-icon {
  min-width: 20px;
  width: 20px;
  height: 20px;
  margin-right: 5px;
}

.pan-sidenav .search-toc-container {
  display: flex;
}

.pan-sidenav .form {
  flex-grow: 1;
  border: 0;
  position: relative;
  text-align: left;
  color: #212121;
}

.pan-sidenav .form-input {
  border: 1px solid #141414;
  height: 40px;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.pan-sidenav .form-input input {
  color: #67768b;
  font-size: 14px;
  line-height: 1.5;
  text-align: left;
  padding: 12px 49px 12px 0;
  text-indent: 12px;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 40px;
  white-space: pre;
  overflow: auto;
  box-sizing: border-box;
  display: block;
  background: none;
  border: none;
  resize: none;
  outline: 0;
}

.pan-sidenav .form-input button {
  width: 25px;
  height: 25px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: transparent;
  border: 0;
  margin-right: 4px;
  position: relative;
  cursor: pointer;
}

.pan-sidenav .toc-books {
  position: relative;
}

.pan-sidenav .toc-books ul {
  list-style: none;
  padding: 0 0 0 var(--title-spacing-horz);
  margin: 0;
}

.pan-sidenav .toc-books div {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 2px 2px 2px 0;
  position: relative;
  margin-top: 2px;
  margin-bottom: 2px;
}

.pan-sidenav .toc-books a {
  align-items: center;
  border-radius: var(--tertiary-action-border-radius);
  color: var(--tertiary-action-text-color);
  display: flex;
  font-size: var(--tertiary-action-font-size);
  line-height: var(--tertiary-action-line-height);
  padding: 8px var(--tertiary-action-padding);
  text-decoration: none;
  width: 100%;
  /* min-height: 24px; */
}

/* Book titles */
.pan-sidenav .toc-books > ul > li > div > a {
  font-size: var(--body-font-size--p2);
  line-height: var(--body-line-height--p3);
}

.pan-sidenav .toc-books > ul > li li[data-key] {
  padding-left: var(--sidebar-book-spacing);
}

/* Reduce sub expanded item padding */
.pan-sidenav .toc-books > ul > li li li[data-key] {
  padding-left: 0;
}

.pan-sidenav .toc-books li:not([data-key]) > div > a {
  padding-left: var(--tertiary-action-padding);
  padding-right: var(--tertiary-action-padding);
  width: 100%;
}
/* ... */

